Training docs/Assignment8/Trial/src/objects/Customer__c.object
<CustomObject>
	<description>This is a Custom Field for Customer.</description>
	<fields>
		<fullName>Bill_Number__c</fullName>
		<description>This is a Bill Number generated when ever a Customer is
			Added.</description>
		<displayFormat>B-{0000}</displayFormat>
		<label>Bill Number</label>
		<type>AutoNumber</type>
	</fields>
	<fields>
		<fullName>Phone_Number__c</fullName>
		<description>This is a Field For the Phone No of Customer.</description>
		<inlineHelpText>Please enter the Phone No .</inlineHelpText>
		<label>Phone Number</label>
		<type>Phone</type>
	</fields>
	<fields>
		<fullName>Shopkeper__c</fullName>
		<description>This is a MD relationship between Customer and
			Shopkeeper.</description>
		<inlineHelpText>Please Select The Shopkeeper.</inlineHelpText>
		<label>Shopkeper</label>
		<referenceTo>Shop__c</referenceTo>
		<relationshipLabel>Customers</relationshipLabel>
		<relationshipName>Customers</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<label>Customer</label>
	<listViews>
		<fullName>All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Customer Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Customers</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>